[package]
edition = "2021"
name = "watch-winder"
version = "0.1.0"
authors = ["magnuskarlsson <magnus.l.karlsson@gmail.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = "0.3.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.5.0", features = ["task-arena-size-8192", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1" }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }


cyw43 = {version ="0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = {version ="0.1.0", features = ["defmt", "overclock"]}

static_cell = "2.1.0"
portable-atomic = { version = "1.6", features = ["critical-section"] }

pio-proc = "0.2"
pio = "0.2.1"
fixed = "1.23.1"
log = "0.4"

ssd1306 ="0.8.4"
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"
uln2003 = "0.3.0"

[profile.release]
debug = 2
